style.css
/* ... */
figure {
	display: block;
	background-color: #ffffff;
	width: 33.33%;
	height: 15em;
	overflow: hidden;
	padding: 0;
	margin: auto;
	cursor: pointer;
	z-index: 2;
	box-shadow: none;
	-o-box-shadow: none;
	-mox-box-shadow: none;
	-webkit-box-shadow: none;
}

figure:hover {
	box-shadow: inset 0 0 1.3em .3em rgba(137, 194, 255, 1);
	-o-box-shadow: inset 0 0 1.3em .3em rgba(137, 194, 255, 1);
	-moz-box-shadow: inset 0 0 1.3em .3em rgba(137, 194, 255, 1);
	-webkit-box-shadow: inset 0 0 1.3em .3em rgba(137, 194, 255, 1);
}

div.flex-images>a>figure {width: 100%;}

div.flex-images>a {
	width: 33.33%;
	margin: auto;
}

div.preview-link {
	width: 100%;
	height: 15em;
	background-position: center center;
	background-size: cover;
	box-shadow: inset 0 0 1.3em .3em  rgba(255, 255, 255, .9);
	-o-box-shadow: inset 0 0 1.3em .3em  rgba(255, 255, 255, .9);
	-moz-box-shadow: inset 0 0 1.3em .3em  rgba(255, 255, 255, .9);
	-webkit-box-shadow: inset 0 0 1.3em .3em  rgba(255, 255, 255, .9);
	display: inline-block;
	transition: opacity .3s ease-out;
	opacity: 1;
}

figure:hover>div.preview-link {
	opacity: .2;
}

figcaption {
	display: table-cell;
	position: relative;
	top: 0;
	width: auto;
	padding: 1em;
	text-align: justify;
	font-weight: bold;
	transition: top .21s ease-out;
	z-index: 10;
	pointer-events: none;	
}

/*styling for the figcaption text*/
figcaption h1 {font-size: 1.8em;}
figcaption h3 {font-size: 1.5em;}
figcaption h1, figcaption h3, figcaption p:not(:last-child){padding-bottom: .5em; text-align: left;}

figcaption.not-mobile {
	height: 15em;
	vertical-align: bottom;
	font-size: .87em;
}

div.flex-images>a {
	text-decoration: none;
	vertical-align: top;
	color: #10002d;
}

figcaption.mobile {
	vertical-align: top;
	background-color: #d5d5e0;
	height: 10em;
	min-height: 
	max-height: 10em;
	font-size: .7em;
	position: relative;
	top: -.4em;
	color: #000000;
	overflow: hidden;
}

figcaption.mobile::before {
	content: '';
	width: 100%;
	height: 100%;
	position: absolute;
	left: 0;
	top: 0;
	background:linear-gradient(transparent 6em, rgba(255,255,255,.5), rgba(255,255,255,1) 9.5em);
	background:-webkit-linear-gradient(transparent 6em, rgba(255,255,255,.5), rgba(255,255,255,1) 9.5em);
}

figcaption.not-mobile::before {
	content: '';
	width: 100%;
	height: 100%;
	position: absolute;
	left: 0;
	top: 5em;
	background:linear-gradient(transparent 6em, rgba(255,255,255,.5), rgba(255,255,255,1) 9.5em);
	background:-webkit-linear-gradient(transparent 6em, rgba(255,255,255,.5), rgba(255,255,255,1) 9.5em);
}

figure:hover figcaption.not-mobile {
	top: -15em;
}

@media all and (max-width: 59em){
	figure {width: 50%;}
	figcaption.mobile {
		width: 50%;
		max-width: 50%;
		min-width: 50%;
	}
	div.flex-images>a{width: 50%;}
}

@media all and (max-width: 41.8em) {
	figure {
		width: 100%;
		padding: 0;
		margin: 0;
	}
	figcaption.mobile {
		width: 100vw;
	}
	div.flex-images>a{width: 100%;}
	div.preview-link {
		background-position: top center;
		box-shadow: inset 0 0 1.3em .7em  rgba(255, 255, 255, .9);
		-o-box-shadow: inset 0 0 1.3em .7em  rgba(255, 255, 255, .9);
		-moz-box-shadow: inset 0 0 1.3em .7em  rgba(255, 255, 255, .9);
		-webkit-box-shadow: inset 0 0 1.3em .7em  rgba(255, 255, 255, .9);
	}
	figure:hover {
		box-shadow: inset 0 0 1.3em .7em rgba(137, 194, 255, 1);
		-o-box-shadow: inset 0 0 1.3em .7em rgba(137, 194, 255, 1);
		-moz-box-shadow: inset 0 0 1.3em .7em rgba(137, 194, 255, 1);
		-webkit-box-shadow: inset 0 0 1.3em .7em rgba(137, 194, 255, 1);
	}
}

.portrait {
	float: right;
	padding: 1em;
	max-width: 30em;
}

@media all and (max-width: 38.125em) {
	.portrait {
		float: none;
		width: 100%;
		max-width: none;
	}
}

/*============================================*/
/*stylings for footer tag excluding form*/


footer {
	width: 100%;
	background-color: #272735;
	color: #ffffff;
	overflow: auto;
	padding: .7em .7em 0 .7em;
	border-top: .35em double #9fa7b5;
}

footer form {
	width: 90%;
	padding: 0 .5em .5em .5em;
}

.footer-section {
	width: 40%;
	float: left;
}

.footer-section:first-child {
	width: 60%;
}

.footer-section:last-child {width: 100%; clear: both;}

.little-bio {
	display: flex;
	min-height: 55%;
	flex-flow: row nowrap;
	justify-content: space-between;
	align-items: center;
}

#social-footer>ul li {
	font-size: 2em;
	padding: .3em;
	display: block;
	transition: all .1s ease-in-out;
}

#social-footer>ul li:hover {
	transform: scale(1.3) translate(-.2em, 0);
}

#social-footer>ul li:active {
	transform: scale(1.5) translate(-.2em, 0);
	color: #89c2ff;
}

#social-footer>ul a:active {color: #89c2ff}

#social-footer ul {
	display: flex;
	flex-flow: column nowrap;
	justify-content: space-around;
	list-style: none;
}

#footer-bio {
	max-width:80%;
	text-align: center;
	padding-bottom: 1.3em;
}

#copyright {float: left; font-size: 1.2em; padding: 0 0.2em; margin-top: -.2em; font-family:'Amaranth', sans-serif;}
#company-logo {max-width: 12.6em; float: left;}

@media all and (max-width: 59em){
	.little-bio {
	  flex-flow: column-reverse nowrap;
		justify-content: center;
		align-content: center;
	}
	
	#social-footer ul {
		flex-flow: row nowrap;
		margin-bottom: 1em;
	}
	
	#social-footer>ul li {padding: 0 .3em;}
	
	#social-footer>ul li:hover {
		transform: scale(1.3) translate(0, -.3em);
	}
	
	#social-footer>ul li:active {
		transform: scale(1.5) translate(0, -.3em);
	}	
}

@media all and (max-width: 47.45em) {
	.footer-section, .footer-section:first-child {
		width: 100%;
	}
	
	.footer-section>form {
		margin: auto;
	}
	
	.little-bio {
		min-height: auto;
		height: auto;
	}

}

/*============================================*/
/*stylings for the footer's form*/

input {
	display: block;
	border-right: .35em double #9fa7b5;
	border-left: .35em double #9fa7b5;
	border-top: .1em solid #9fa7b5;
	border-bottom: .1em solid #9fa7b5;
	width: 85%;
	font-size: 1.1em;
	padding: .1em;
	float: right;
}

input:first-of-type {
	border-top: .35em double #9fa7b5;
	border-radius: .3em .3em 0 0;}
/* ... */

